<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/notify" />

            <CheckBox
                android:id="@+id/opcVibrate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:checked="true"
                android:enabled="false"
                android:text="@string/notif_vibrate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/opcNotif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="5dp"
                    android:checked="false"
                    android:enabled="true"
                    android:text="@string/notif_notif" />

                <CheckBox
                    android:id="@+id/opcNotifWatch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="5dp"
                    android:checked="false"
                    android:enabled="false"
                    android:text="@string/notif_watch" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/opcSound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:enabled="true"
                android:text="@string/notif_sound" />

            <CheckBox
                android:id="@+id/opcMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:enabled="true"
                android:text="@string/notif_message" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgColor"
            android:src="@mipmap/ic_launcher_round_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:src="@drawable/trabajo" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cmdStart"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/start" />

                <Button
                    android:id="@+id/cmdStop"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/exit" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>